Updated Idea
updated flags